fix imports for openjdk version